Landing Page done

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <!-- ========== Page Title ========== -->
   <title>PEATCHER- LEARN ANYWHERE, ANYTIME !</title>
 
+  <!-- ========== Favicon Icon ========== -->
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+
   <!-- ========== Start Stylesheet ========== -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
